{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 12,
  "lineage": "09bc55b0-a3b3-cdcf-0b2a-47b8eece98ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etl_ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0039da1f3917fa8e3",
            "arn": "arn:aws:ec2:eu-central-1:079829475258:instance/i-084c16b3660e8e908",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084c16b3660e8e908",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Apache Flume Ingestor",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c829c75f6145bf82"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c829c75f6145bf82",
            "private_dns": "ip-10-0-2-18.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.18",
            "public_ip": "3.71.255.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5d85f6da708e56c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cbc8ec778046d37",
            "tags": {
              "Name": "S3 Data Ingestor"
            },
            "tags_all": {
              "Name": "S3 Data Ingestor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0944315a9d954fa5b"
            ]
          },
          "dependencies": [
            "module.network.aws_network_interface.etl_public",
            "module.network.aws_security_group.etl_ssh",
            "module.network.aws_subnet.etl_public",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etl_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0039da1f3917fa8e3",
            "arn": "arn:aws:ec2:eu-central-1:079829475258:instance/i-0aa1a129510a7779c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa1a129510a7779c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ee0daed4cf293fac"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee0daed4cf293fac",
            "private_dns": "ip-10-0-1-33.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4792ca30abf86ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067c397eb155ca47c",
            "tags": {
              "Name": "Apache Flume Agent"
            },
            "tags_all": {
              "Name": "Apache Flume Agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b80babd0f587783b"
            ]
          },
          "dependencies": [
            "module.network.aws_network_interface.etl_private",
            "module.network.aws_subnet.etl_private",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "etl_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:internet-gateway/igw-07ad12d96c8fd605c",
            "id": "igw-07ad12d96c8fd605c",
            "owner_id": "079829475258",
            "tags": {
              "Name": "Data Ingestion IGW"
            },
            "tags_all": {
              "Name": "Data Ingestion IGW"
            },
            "vpc_id": "vpc-056f74b0f0abb66b3"
          },
          "dependencies": [
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "etl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:network-interface/eni-0ee0daed4cf293fac",
            "id": "eni-0ee0daed4cf293fac",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:49:3a:e4:69:36",
            "owner_id": "079829475258",
            "private_ip": "10.0.1.33",
            "private_ip_list": [
              "10.0.1.33"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.33"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b80babd0f587783b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067c397eb155ca47c",
            "tags": {
              "Name": "Data Ingestion Subnet Interface - Private"
            },
            "tags_all": {
              "Name": "Data Ingestion Subnet Interface - Private"
            }
          },
          "dependencies": [
            "module.network.aws_subnet.etl_private",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "etl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:network-interface/eni-0c829c75f6145bf82",
            "id": "eni-0c829c75f6145bf82",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e4:ff:62:1e:4a",
            "owner_id": "079829475258",
            "private_ip": "10.0.2.18",
            "private_ip_list": [
              "10.0.2.18"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.18"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0944315a9d954fa5b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cbc8ec778046d37",
            "tags": {
              "Name": "Data Ingestion Subnet Interface - Public"
            },
            "tags_all": {
              "Name": "Data Ingestion Subnet Interface - Public"
            }
          },
          "dependencies": [
            "module.network.aws_security_group.etl_ssh",
            "module.network.aws_subnet.etl_public",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "etl_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:route-table/rtb-0e068d9173a76b856",
            "id": "rtb-0e068d9173a76b856",
            "owner_id": "079829475258",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ad12d96c8fd605c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056f74b0f0abb66b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.etl_igw",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "etl_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00350d5fc474ba7c8",
            "route_table_id": "rtb-0e068d9173a76b856",
            "subnet_id": "subnet-00cbc8ec778046d37"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.etl_igw",
            "module.network.aws_route_table.etl_rt",
            "module.network.aws_subnet.etl_public",
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "etl_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:security-group/sg-0944315a9d954fa5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0944315a9d954fa5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230121184906622800000001",
            "name_prefix": "terraform-",
            "owner_id": "079829475258",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056f74b0f0abb66b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "etl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:subnet/subnet-067c397eb155ca47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067c397eb155ca47c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079829475258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Data Ingestion - Private"
            },
            "tags_all": {
              "Name": "Data Ingestion - Private"
            },
            "vpc_id": "vpc-056f74b0f0abb66b3"
          },
          "dependencies": [
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "etl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:subnet/subnet-00cbc8ec778046d37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cbc8ec778046d37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079829475258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Data Ingestion - Public"
            },
            "tags_all": {
              "Name": "Data Ingestion - Public"
            },
            "vpc_id": "vpc-056f74b0f0abb66b3"
          },
          "dependencies": [
            "module.network.aws_vpc.etl"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:079829475258:vpc/vpc-056f74b0f0abb66b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9697aae878bb7c3",
            "default_route_table_id": "rtb-011ce22038358f31d",
            "default_security_group_id": "sg-0b80babd0f587783b",
            "dhcp_options_id": "dopt-0293fe87f84282eb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056f74b0f0abb66b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011ce22038358f31d",
            "owner_id": "079829475258",
            "tags": {
              "Name": "Data Ingestion"
            },
            "tags_all": {
              "Name": "Data Ingestion"
            }
          }
        }
      ]
    }
  ]
}